--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 main{
   display: flex;
   width: 100vw;
-  height: 100vw;
+  height: 100%vh;
   justify-content: center;
   align-items: center;
 }
@@ -68,7 +68,7 @@ button{
   cursor: pointer;
 }
 
-.resultado{
+.result{
   display: flex;
   margin-top: 20px;
   align-items: center;
