--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 main{
   display: flex;
   width: 100vw;
-  height: 100%vh;
   justify-content: center;
   align-items: center;
+  margin-top: 10px;
 }
 
 .container{
