--- a/style.css
+++ b/style.css
@@ -4,10 +4,9 @@
 }
 
 main{
-  display: flex;
-  width: 100vw;
-  justify-content: center;
-  align-items: center;
+  display: block;
+  width: 100%vw;
+  height: 100%vh;
   margin-top: 10px;
 }
 
