--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
 }
 
 main{
-  display: block;
+  display: flex;
   width: 100%vw;
   height: 100%vh;
+  justify-content: center;
+  align-items: center;
   margin-top: 10px;
 }
 
